@startuml
'https://plantuml.com/class-diagram


abstract class Animal <<abstract>>{
+abstract greeting():void
}

Animal <|-- Cat
Animal <|-- Dog

class Cat {
+greeting():void
}

class Dog {
+greeting():void
+greeting(another: Dog): void
}

Dog <|-- BigDog

class BigDog {
+greeting():void
+greeting(another: Dog): void
}

note left of Cat: Print "Meow"
note right of Dog: Print "Woof!"
note bottom of Dog : Print "Woooooooof!"
note right of BigDog: Print "Woow!"
note bottom of BigDog: Print "Woooooowwww!"
@enduml